Grease Pencil fill regression #79567

Closed
opened 2020-08-05 19:21:59 +02:00 by Dalai Felinto · 11 comments

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-05 12:17, hash: c961bf8975
Worked: 2.83

Short description of error

The face of the bike sample file is different in 2.90.

Exact steps for others to reproduce the error

Bike Ride demo file from:
https://www.blender.org/download/demo-files/

Download:
https://download.blender.org/demo/greasepencil-bike.blend

In 2.83:

image.png

In 2.90 beta:

image.png

**Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-05 12:17, hash: `c961bf8975` Worked: 2.83 **Short description of error** The face of the bike sample file is different in 2.90. **Exact steps for others to reproduce the error** Bike Ride demo file from: https://www.blender.org/download/demo-files/ Download: https://download.blender.org/demo/greasepencil-bike.blend In 2.83: ![image.png](https://archive.blender.org/developer/F8749331/image.png) In 2.90 beta: ![image.png](https://archive.blender.org/developer/F8749328/image.png)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-08-05 19:40:59 +02:00

This is not a bug. As it's detailed in the Release notes (https://wiki.blender.org/wiki/Reference/Release_Notes/2.90/Grease_Pencil) there is a change in how works the first frame management (11ba9eec70)

Before this change, the first frame of grease pencil was displayed in any current frame before the "real" grease pencil frame, so if you start to draw in Frame 20, the stroke was displayed since frame 1. This way of working was based in the old logic of grease pencil as annotation tool, but it was totally unlogic using the new logic, so we decided to fix it following several animators feedback.

Now, if you draw your first frame in frame 20, nothing is displayed before this frame.

Looking at the example, the layer face colorhas its first drawing in frame `22' .

image.png

To solve the issue, the first frame must must set before.

Note: This has not been fixed in versioning because there is a lot of situations where this is problematic.

This is not a bug. As it's detailed in the Release notes (https://wiki.blender.org/wiki/Reference/Release_Notes/2.90/Grease_Pencil) there is a change in how works the first frame management (11ba9eec7017) Before this change, the first frame of grease pencil was displayed in any current frame before the "real" grease pencil frame, so if you start to draw in Frame `20`, the stroke was displayed since frame `1`. This way of working was based in the old logic of grease pencil as annotation tool, but it was totally unlogic using the new logic, so we decided to fix it following several animators feedback. Now, if you draw your first frame in frame `20`, nothing is displayed before this frame. Looking at the example, the layer `face color`has its first drawing in frame `22' . ![image.png](https://archive.blender.org/developer/F8749379/image.png) To solve the issue, the first frame must must set before. Note: This has not been fixed in versioning because there is a lot of situations where this is problematic.

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'

I closed by error.

I closed by error.

I think we can close it as Invalid

I think we can close it as `Invalid`
Author
Owner

Hi Antonio.

I can see the reasoning, but still can't understand why no doversion. If adding new frames would break old files, well, we broke them anyways, so why not break in a way that at least most of the files work as before? Could you elaborate more on the reasons here?

In a related note @antoniov what about the face (as well as "girl R arm" > "arm color") not visible at frame 69?

image.png

Hi Antonio. I can see the reasoning, but still can't understand why no doversion. If adding new frames would break old files, well, we broke them anyways, so why not break in a way that at least most of the files work as before? Could you elaborate more on the reasons here? In a related note @antoniov what about the face (as well as "girl R arm" > "arm color") not visible at frame 69? ![image.png](https://archive.blender.org/developer/F8751540/image.png)

This issue was referenced by 96e460ed9b

This issue was referenced by 96e460ed9b301b5a83399435bbf662a6258b243a

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79567
No description provided.